# api_flask

./: README.md  pyproject.toml  requirements.txt
src/: Dockerfile  app.py  comandos_docker.txt
src/db/: CreateDatabase.sql
